# client

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  CMakeLists.txt.save  run.sh
doc/: index.md
src/: main.cpp  socketmain.cpp  socketmain.hpp  upload.cpp  upload.hpp
src/config/: conf.toml  configuration.cpp  configuration.hpp  toml.cpp  toml.hpp
src/utils/: dateformat.cpp  dateformat.hpp  err.cpp  err.hpp  log.hpp  thread_temp.cpp  thread_temp.hpp  utils.cpp  utils.hpp
testsss/: main.cpp
